fix forfirefox113, flex-direction, frex-wrap

--- a/113/ucjsDownloadsStatusModoki.uc.js.css
+++ b/113/ucjsDownloadsStatusModoki.uc.js.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+/*@version       2023/05/18 fix forfirefox113, flex-direction, frex-wrap*/
 /*@version       2023/04/25 fix forfirefox113, inline-blockfirefox113*/
 /*@version       2023/03/09 Bug 1820534 - Move front-end to modern flexbox.*/
 /*@version       2022/11/24 21:00 Bug 1802142 - Remove no longer used browser-bottombox*/
@@ -26,35 +27,36 @@
 }
 
 #contentAreaDownloadsView[ucjsDownloadsStatusModoki] #downloadsListBox { 
-  display:inline-block !important; 
   overflow-y: auto !important; 
   scrollbar-width: thin;
   border: none !important;
+  flex-direction: row;
+  flex-wrap: wrap;
 } 
 
 #contentAreaDownloadsView[ucjsDownloadsStatusModoki] richlistitem:not([hidden]) { 
+	width: 276px;
   border-width: 0 !important;
-  display:inline-block !important;
   height: 3.0em !important;
   min-height: 3.0em !important;
 } 
 #contentAreaDownloadsView[ucjsDownloadsStatusModoki] .downloadMainArea {
-	display: inline-block !important;
 }
 
 #contentAreaDownloadsView[ucjsDownloadsStatusModoki] .downloadContainer {
 	max-width: 200px !important;
-	display: inline-block !important;
 }
 #contentAreaDownloadsView[ucjsDownloadsStatusModoki] .downloadTypeIcon {
 	margin-inline-end: 4px !important;
 	margin-inline-start: 4px !important;
-	display: inline-block !important;
 }
 #contentAreaDownloadsView[ucjsDownloadsStatusModoki] .downloadButton
 {
 	width: 36px !important;
 	padding-inline-end: 4px !important;
 	padding-inline-start: 4px !important;
-	display: inline-block !important;
+}
+#contentAreaDownloadsView[ucjsDownloadsStatusModoki] #downloadsListEmptyDescription
+{
+	flex: 1 !important;
 }
